sugar-presence-service (0.82.2-1) UNRELEASED; urgency=low

  * New upstream release.
  * Depend on ${misc:Depends}.

 -- Jonas Smedegaard <dr@jones.dk>  Tue, 11 Nov 2008 11:05:33 +0100

sugar-presence-service (0.82.0-1) unstable; urgency=low

  * New upstream release.
  * Update cdbs snippets:
    + Move dependency cleanup to new local snippet package-relations.mk.
    + Update copyright-check output to more closely match proposed new
      copyright file format.  Update copyright-hints.
    + Internal restructuring of flavor-enhanced autotools- and makefile-
      snippets.
    + Update README.cdbs-tweaks.
  * Add DEB_MAINTAINER_MODE in debian/rules (thanks to Romain Beauxis).

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 16 Aug 2008 20:30:08 +0200

sugar-presence-service (0.81.2-1) unstable; urgency=low

  * New upstream release.
  * Update local cdbs snippets:
    + Relax copyright-check to only warn about its discoveries.  Closes:
      bug#486999.
  * Update debian/copyright-hints.

 -- Jonas Smedegaard <dr@jones.dk>  Sat, 21 Jun 2008 01:27:39 +0200

sugar-presence-service (0.81.1-1) unstable; urgency=low

  * New upstream release.
  * Reorganize debian/copyright to only mention each license once.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 09 Jun 2008 12:43:04 +0200

sugar-presence-service (0.79.3-2) unstable; urgency=low

  * Have python-gobject build-dependency fallback to python-gtk2 older
    than 2.9 (it provided gobject back then).

 -- Jonas Smedegaard <dr@jones.dk>  Thu, 24 Apr 2008 12:10:02 +0200

sugar-presence-service (0.79.3-1) unstable; urgency=low

  * New upstream release.
    Highlights:
    + always reset the reconnect timer when disconnected
  * Bump debhelper compatibility level to 6 (was 5).
  * Update local cdbs snippets:
    + Relax python-central and python-support build-dependencies in
      python-autotools.mk.
    + Strip any non-printable characters in copyright-check.mk.
  * Mention exact upstream Git source in debian/copyright.